# agent.nvim

./: .gitignore  README.md  pyproject.toml
doc/: agent.txt
lua/agent/: commands.lua  init.lua  telescope.lua  ui.lua  utils.lua
lua/agent/ui/: conversations.lua  telescope.lua
plugin/: load_agent.lua
rplugin/python3/agent/: __init__.py  chat.py  context.py  llm.py  storage.py
rplugin/python3/agent/llm/: __init__.py  base.py  constants.py  factory.py
rplugin/python3/agent/llm/providers/: anthropic.py  bedrock.py
rplugin/python3/agent/mcp/: client.py
rplugin/python3/agent/util/: logger.py
