[project]
name = "agent-nvim"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pynvim>=0.5.0",
    "openai>=1.12.0",
    "anthropic>=0.19.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.6.0",
    "tenacity>=8.2.3",
    "ruff>=0.8.4",
    "jupyter-client>=8.6.0",
    "boto3>=1.35.97",
    "mcp[cli]>=1.2.0",
]

[tool.setuptools]
package-dir = {"" = "rplugin/python3"}
packages = ["agent"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
]
